<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DartFan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Choose teams to follow</string>
    <string name="ui_button_mens_teams">MEN\'S</string>
    <string name="ui_button_womens_teams">WOMEN\'S</string>
    <string name="ui_button_coed_teams">CO-ED</string>
    <string name="action_example"></string>

    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Events</item>
        <item>Settings</item>
        <item>News</item>
        <item>Forum</item>
     </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/events_icon</item>
        <item>@drawable/settings_icon</item>
        <item>@drawable/news_icon</item>
        <item>@drawable/forum_icon</item>
    </array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_new_event">New Event</string>
    <string name="title_new_event">New Event</string>
    <string name="title_activity_event_display">Event</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="event_name">Event name here</string>
    <string name="event_notes">Notes...</string>
    <string name="event_reminder_text">Set Date/Reminder</string>
    <string name="new_event_save_button_text">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_forum_activity">DartFanForum</string>
    <string name="title_activity_forum">ForumActivity</string>
    <string name="server_addr">http://10.31.213.217:8888</string>
    <string name="title_user_preference">User Name</string>
    <string name="summary_user_preference">Click to enter name</string>
    <string name="dialog_title_user_preference">Enter User Name</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="title_privacy_preference">Privacy Setting</string>
    <string name="summary_privacy_preference">Post as anonymous to forum</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="title_notification_preference">Notification Preference</string>
    <string name="summary_notification_preference">Select to recieve notifications of upcoming events</string>
    <string name="misc_preferences">Misc.</string>
    <string name="title_webpage_preference">Dartmouth Sports</string>
    <string name="summary_webpage_preference">http://www.dartmouthsports.com</string>
    <string name="label_event_location">Set Event Location:</string>
    <string name="event_calendar_button">Add to calendar</string>

</resources>
