<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dartmouth.cs.ploomis.dartfan.NewEventActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:id="@+id/eventName"
        android:inputType="textCapWords"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_notes"
        android:id="@+id/eventNotes"
        android:inputType="textCapSentences"
        android:layout_margin="5dp"
        android:layout_below="@id/eventName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLayout"
        android:layout_below="@id/eventNotes"
        android:orientation="horizontal">

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_reminder_text"
            android:layout_margin="5dp"
            android:id="@+id/reminderButton"
            android:onClick="displayDateTimeDialog"/>

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/saveButton"
            android:text="@string/new_event_save_button_text"
            android:onClick="onSaveClicked"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_event_location"
        android:layout_below="@+id/btnLayout"
        android:id="@+id/locationLabel"/>

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context="dartmouth.cs.ploomis.dartfan.NewEventActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@id/locationLabel"
        android:layout_margin="5dp"
        tools:layout="@layout/activity_new_event" />

</RelativeLayout>